1)show form first rum(regedit value). 2)icon.

--- a/ApacheGuacamoleIMEswitch/App.config
+++ b/ApacheGuacamoleIMEswitch/App.config
@@ -10,6 +10,9 @@
             <setting name="URL" serializeAs="String">
                 <value />
             </setting>
+            <setting name="CreateStartupLink" serializeAs="String">
+                <value>False</value>
+            </setting>
         </ApacheGuacamoleIMEswitch.Properties.Settings>
     </userSettings>
 </configuration>
