--- a/ApacheGuacamoleIMEswitch/Properties/Settings.settings
+++ b/ApacheGuacamoleIMEswitch/Properties/Settings.settings
@@ -5,5 +5,8 @@
     <Setting Name="URL" Type="System.String" Scope="User">
       <Value Profile="(Default)" />
     </Setting>
+    <Setting Name="CreateStartupLink" Type="System.Boolean" Scope="User">
+      <Value Profile="(Default)">False</Value>
+    </Setting>
   </Settings>
 </SettingsFile>
