新增微軟遠端桌面連線

--- a/ApacheGuacamoleIMEswitch/App.config
+++ b/ApacheGuacamoleIMEswitch/App.config
@@ -13,6 +13,18 @@
             <setting name="CreateStartupLink" serializeAs="String">
                 <value>False</value>
             </setting>
+            <setting name="RDP" serializeAs="String">
+                <value />
+            </setting>
+            <setting name="UID" serializeAs="String">
+                <value />
+            </setting>
+            <setting name="PWD" serializeAs="String">
+                <value />
+            </setting>
+            <setting name="PORT" serializeAs="String">
+                <value />
+            </setting>
         </ApacheGuacamoleIMEswitch.Properties.Settings>
     </userSettings>
 </configuration>
